add for who part content

--- a/index.html
+++ b/index.html
@@ -59,7 +59,19 @@
 
         </section>
         <section id="for-who" class="sub-part">
-            
+            <h1>Pour Qui ?</h1>
+            <p>Le format, la license d'utilisation et le côté schématique des signes ouvre énormément de possibilités quand aux usages.</p>
+            <img src="https://camo.githubusercontent.com/b9974370771039945a83c1e702335daee49e98c4/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f6d756c74696d656469612e706e67" alt="Illustration du multi-support">
+            <p>Nous avons cependant déjà identifiés ces besoins concrets, auprès d'acteurs et d'associations du monde des sourds:
+                <ul>
+                    <li>Supports d’<strong>apprentissage et d’enseignement des langues signées</strong> (pédagogie à l'école, jeux, cartes-mémo, coloriages, …)</li>
+                    <li><strong>Affichettes</strong> accessibilité (éléments de conversation au bar, orientation dans un festival ou évènement)</li>
+                    <li>Créer un <strong>jeu de cartes à imprimer</strong> soi-même (variante de Time's Up, cohésion entendants-sourds)</li>
+                    <li>Activité dans le jeu éducatif open source <strong>GCompris</strong> (chiffres, lettres, mots...)</li>
+                    <li><strong>Accessibilité</strong> sur les sites Web (épeler automatiquement, claviers virtuels, illustrations, menus, résumés de page…)</li>
+                    <li><strong>Mémos</strong>, permettant aux interprêtes de pouvoir noter un signe pour ne pas l'oublier</li>
+                </ul>
+            </p>
         </section>
         <section id="how" class="sub-part">
             
