--- a/index.html
+++ b/index.html
@@ -74,7 +74,28 @@
             </p>
         </section>
         <section id="how" class="sub-part">
-            
+            <h1>Comment ?</h1>
+            <p>Évidemment, nous sommes conscients de la quantité de travail à fournir pour construire une bibliothèque avec des milliers de mots.</p>
+            <p>C'est pourquoi nous souhaitons nous appuyer sur une série d'éléments réutilisables pour accélérer la création des signes.</p>
+
+            <h2>Éléments à assembler</h2>
+            <p>Les différents éléments réutilisables seront regroupés dans des fichiers, indépendamment des langues.</p><p>Pour créer un nouveau mot, un simple copier-coller des éléments suffira pour démarrer!</p>
+            <img src="https://camo.githubusercontent.com/d3578fdec1803537a3fb51632270b96e048409d8/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f617373656d626c652e6a7067" alt="Assemblage des éléments du corps en svg">
+            <p>Avec quelques dizaines d'éléments, il est possible de commencer à décrire un vocabulaire, le logiciel de dessin permettant de tourner, inverser ou étirer.</p>
+            <p>À terme, nous estimons qu'il faudra une centaine de «mains» pour permettre de contribuer des nouveaux mots sans devoir retoucher les éléments.</p>
+            <p>Cette approche permet également de garantir un minimum d'homogénéité graphique au sein de la bibliothèque.</p>
+
+            <h2>Représenter le mouvement</h2>
+            <p>Le logiciel de dessin permet de controler l'aspect des contours des objets (pointillés, opacité, etc.), ce qui permet de représenter le mouvement de manière universelle, à la manière des bandes dessinées.</p>
+            <img src="https://camo.githubusercontent.com/b9d237d1ef880504af9e6941874dbc906c58933f/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f6d6f76656d657375732e706e67" alt ="Représentation du mouvement avec des flèches">
+            <p>Une bibliothèque de simples flèches pourra rendre explicites les mouvements amples.</p>
+            <img src="https://camo.githubusercontent.com/579f7c95e435900ccdf9ddd65991350a8faa629d/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f6361707475726973692e706e67" alt="lexique, plateforme, iconicité">
+            <span>(exemple non vectoriel du pôle de recherche <a href="http://www.irit.fr/presto/lexique.html" title="PRESTO website lexique page">PRESTO</a>)</span>
+
+            <h2>Plateforme collaborative</h2>
+            <p>Nous souhaitons commencer avec une plateforme comme <a href="https://fr.wikipedia.org/wiki/GitHub" title="Github wikipedia page">Github</a>, pour construire et enrichir la bibliothèque à plusieurs.</p>
+            <p>Dans un premier temps, les fichiers seront téléchargés, édités sur le poste de travail avec un logiciel comme <a href="https://inkscape.org/" title="Inskscape website">Inkscape</a>, et les résultats renvoyés sur la plateforme. Nous mettrons à profit notre expérience dans le monde des logiciels libres pour animer et gérer les contributions.</p>
+            <p>À terme, nous pourrons envisager d'avoir une application Web, avec un véritable éditeur en ligne (comme les pour les <a href="http://faceyourmanga.com/" title="Face Your Manga website">avatars mangas</a>...)</p>
         </section>
     </div>
 
