add grid to why part

--- a/index.html
+++ b/index.html
@@ -14,49 +14,62 @@
 
     <div class="container content">
         <section id="why" class="sub-part">
+
             <h1>Pourquoi ?</h1>
             <p>Il existe des milliers de sites Web, dictionnaires et bibliothèques en ligne, dédiés aux langues des signes. Pourquoi vouloir recommencer ?</p>
 
-            <h2>License libre</h2>
-            <p>Les licences d'utilisation des contenus disponibles ne sont pas toujours ouvertes (copyright, utilisation impossible hors site, ...).</p>
-            <p>Il est donc très difficile de s'approprier les contenus, et surtout de les améliorer ou de contribuer.</p>
-            <p>Nous souhaitons construire une bibliothèque de signes qui soit dans le domaine public (Creative Commons CC-0).</p>
+            <div class="row">
 
-            <h2>Vectorielle</h2>
-            <p>Les formats des contenus disponibles sont variés, mais la plupart sont des vidéos, photos animées, ou dessins numérisés, ce qui limite les usages. Notamment à cause de la présence d'un fond obscur, ou d'un manque de résolution ou de netteté.</p>
-            <p>Le format vectoriel présente de nombreux avantages:
-                <ul>
-                    <li>
-                        <strong>Redimensionnable</strong> (étirable à l'infini sans perte)
-                    </li>
-                    <li>
-                        <strong>Assemblage</strong> (manipulation d'objets ou groupes d'objets plutôt que de pixels — bras, main, …)
-                    </li>
-                    <li>
-                        <strong>Déclinable</strong> (appropriation du contenu facilitée — couleurs, proportions, …)
-                    </li>
-                    <li>
-                        <strong>Multi-supports</strong> (impression papier, sites Web, applications, ...)
-                    </li>
-                    <li>
-                        <strong>Neutre et anonyme</strong> (celui ou celle qui contribue n'expose pas son visage)
-                    </li>
-                    <li>
-                        <strong>Qualité constante</strong> (pas de notion de qualité de la caméra ou de l'appareil photo)
-                    </li>
-                </ul>
-            </p>
-            <img src="https://camo.githubusercontent.com/f2070c914e882669d72d184fc256219dcbad011b/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f766563746f722e706e67" alt="Copie d'écran d'Inscape">
-            <p>De plus, le <a href="https://fr.wikipedia.org/wiki/Scalable_Vector_Graphics" title="Scalable_Vector_Graphics Wikipedia's page">format vectoriel standard SVG</a> est supporté par de nombreux logiciels (et navigateurs Web).</p>
+                <div class="col-md-4">
+                    <h2>License libre</h2>
+                    <p>Les licences d'utilisation des contenus disponibles ne sont pas toujours ouvertes (copyright, utilisation impossible hors site, ...).</p>
+                    <p>Il est donc très difficile de s'approprier les contenus, et surtout de les améliorer ou de contribuer.</p>
+                    <p>Nous souhaitons construire une bibliothèque de signes qui soit dans le domaine public (Creative Commons CC-0).</p>
+                </div>
 
-            <h2>Universelle</h2>
-            <p>La bibliothèque sera internationale. Chaque lettre, chiffre ou mot pourra être décliné dans différentes langues, selon les envies des contributeurs. Pour commencer, nous nous focaliserons probablement sur la langue des signes française.</p>
-            <p>Contrairement aux photos, les illustrations produites ne seront pas obligatoirement à l'image des contributeurs. Elles feront preuve de diversité (enfants, femmes, hommes, multiethnique ...) et le plus schématique possible (visages, bustes, vêtements...).</p>
+                <div class="col-md-4">
+                    <h2>Universelle</h2>
+                    <p>La bibliothèque sera internationale. Chaque lettre, chiffre ou mot pourra être décliné dans différentes langues, selon les envies des contributeurs. Pour commencer, nous nous focaliserons probablement sur la langue des signes française.</p>
+                    <p>Contrairement aux photos, les illustrations produites ne seront pas obligatoirement à l'image des contributeurs. Elles feront preuve de diversité (enfants, femmes, hommes, multiethnique ...) et le plus schématique possible (visages, bustes, vêtements...).</p>
+                </div>
 
-            <h2>Collaborative</h2>
-            <p>Chaque visuel pourra être recherché par mot clé et téléchargé par langue sur une page Web minimaliste.</p>
-            <p>Tout le monde pourra s'approprier, corriger, améliorer et ajouter des signes. La bibliothèque sera donc construite avec l'aide de contributeurs bénévoles. Nous encadrerons le projet avec la même philosophie que les logiciels libres!</p>
-            <p>La licence libre permettra aussi de publier le contenu de la bibliothèque sur plusieurs plateformes existantes (ex. <a href="https://thenounproject.com/term/sign-language/" title="thenounproject">thenounproject</a>, <a href="https://openclipart.org/search/?query=sign+language" title="openclipart">openclipart</a>).</p>
+                <div class="col-md-4">
+                    <h2>Collaborative</h2>
+                    <p>Chaque visuel pourra être recherché par mot clé et téléchargé par langue sur une page Web minimaliste.</p>
+                    <p>Tout le monde pourra s'approprier, corriger, améliorer et ajouter des signes. La bibliothèque sera donc construite avec l'aide de contributeurs bénévoles. Nous encadrerons le projet avec la même philosophie que les logiciels libres!</p>
+                    <p>La licence libre permettra aussi de publier le contenu de la bibliothèque sur plusieurs plateformes existantes (ex. <a href="https://thenounproject.com/term/sign-language/" title="thenounproject">thenounproject</a>, <a href="https://openclipart.org/search/?query=sign+language" title="openclipart">openclipart</a>).</p>
+                </div>
+
+                <div class="col-md-12">
+                    <h2>Vectorielle</h2>
+                    <p>Les formats des contenus disponibles sont variés, mais la plupart sont des vidéos, photos animées, ou dessins numérisés, ce qui limite les usages. Notamment à cause de la présence d'un fond obscur, ou d'un manque de résolution ou de netteté.</p>
+                    <p>Le format vectoriel présente de nombreux avantages:
+                        <ul>
+                            <li>
+                                <strong>Redimensionnable</strong> (étirable à l'infini sans perte)
+                            </li>
+                            <li>
+                                <strong>Assemblage</strong> (manipulation d'objets ou groupes d'objets plutôt que de pixels — bras, main, …)
+                            </li>
+                            <li>
+                                <strong>Déclinable</strong> (appropriation du contenu facilitée — couleurs, proportions, …)
+                            </li>
+                            <li>
+                                <strong>Multi-supports</strong> (impression papier, sites Web, applications, ...)
+                            </li>
+                            <li>
+                                <strong>Neutre et anonyme</strong> (celui ou celle qui contribue n'expose pas son visage)
+                            </li>
+                            <li>
+                                <strong>Qualité constante</strong> (pas de notion de qualité de la caméra ou de l'appareil photo)
+                            </li>
+                        </ul>
+                    </p>
+                    <img src="https://camo.githubusercontent.com/f2070c914e882669d72d184fc256219dcbad011b/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f766563746f722e706e67" alt="Copie d'écran d'Inscape">
+                    <p>De plus, le <a href="https://fr.wikipedia.org/wiki/Scalable_Vector_Graphics" title="Scalable_Vector_Graphics Wikipedia's page">format vectoriel standard SVG</a> est supporté par de nombreux logiciels (et navigateurs Web).</p>
+                </div>
+
+            </div>
 
         </section>
         <section id="for-who" class="sub-part">
