better grid for why part

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container-fluid header">
+    <div class="container-fluid header text-center">
         <h1>LSF Libre</h1>
         <h2>Une bibliothèque de signes universelle, vectorielle, et libre</h2>
     </div>
@@ -43,30 +43,35 @@
                 <div class="col-md-12">
                     <h2>Vectorielle</h2>
                     <p>Les formats des contenus disponibles sont variés, mais la plupart sont des vidéos, photos animées, ou dessins numérisés, ce qui limite les usages. Notamment à cause de la présence d'un fond obscur, ou d'un manque de résolution ou de netteté.</p>
-                    <p>Le format vectoriel présente de nombreux avantages:
-                        <ul>
-                            <li>
-                                <strong>Redimensionnable</strong> (étirable à l'infini sans perte)
-                            </li>
-                            <li>
-                                <strong>Assemblage</strong> (manipulation d'objets ou groupes d'objets plutôt que de pixels — bras, main, …)
-                            </li>
-                            <li>
-                                <strong>Déclinable</strong> (appropriation du contenu facilitée — couleurs, proportions, …)
-                            </li>
-                            <li>
-                                <strong>Multi-supports</strong> (impression papier, sites Web, applications, ...)
-                            </li>
-                            <li>
-                                <strong>Neutre et anonyme</strong> (celui ou celle qui contribue n'expose pas son visage)
-                            </li>
-                            <li>
-                                <strong>Qualité constante</strong> (pas de notion de qualité de la caméra ou de l'appareil photo)
-                            </li>
-                        </ul>
-                    </p>
-                    <img src="https://camo.githubusercontent.com/f2070c914e882669d72d184fc256219dcbad011b/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f766563746f722e706e67" alt="Copie d'écran d'Inscape">
-                    <p>De plus, le <a href="https://fr.wikipedia.org/wiki/Scalable_Vector_Graphics" title="Scalable_Vector_Graphics Wikipedia's page">format vectoriel standard SVG</a> est supporté par de nombreux logiciels (et navigateurs Web).</p>
+                    <p>Le format vectoriel présente de nombreux avantages:</p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>
+                                    <strong>Redimensionnable</strong> (étirable à l'infini sans perte)
+                                </li>
+                                <li>
+                                    <strong>Assemblage</strong> (manipulation d'objets ou groupes d'objets plutôt que de pixels — bras, main, …)
+                                </li>
+                                <li>
+                                    <strong>Déclinable</strong> (appropriation du contenu facilitée — couleurs, proportions, …)
+                                </li>
+                                <li>
+                                    <strong>Multi-supports</strong> (impression papier, sites Web, applications, ...)
+                                </li>
+                                <li>
+                                    <strong>Neutre et anonyme</strong> (celui ou celle qui contribue n'expose pas son visage)
+                                </li>
+                                <li>
+                                    <strong>Qualité constante</strong> (pas de notion de qualité de la caméra ou de l'appareil photo)
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="https://camo.githubusercontent.com/f2070c914e882669d72d184fc256219dcbad011b/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f766563746f722e706e67" alt="Copie d'écran d'Inscape">
+                            <p>De plus, le <a href="https://fr.wikipedia.org/wiki/Scalable_Vector_Graphics" title="Scalable_Vector_Graphics Wikipedia's page">format vectoriel standard SVG</a> est supporté par de nombreux logiciels (et navigateurs Web).</p>
+                        </div>
+                    </div>
                 </div>
 
             </div>
