remove useless class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <div id="content">
-        <section id="why" class="sub-part">
+        <section id="why">
             <div class="container">
                 <h1>Pourquoi ?</h1>
                 <p class="intro">Il existe des milliers de sites Web, dictionnaires et bibliothèques en ligne, dédiés aux langues des signes. Pourquoi vouloir recommencer ?</p>
@@ -92,7 +92,7 @@
             </div>
 
         </section>
-        <section id="for-who" class="sub-part">
+        <section id="for-who">
             <div class="container">
                 <h1>Pour Qui ?</h1>
                 <p class="intro">Le format, la license d'utilisation et le côté schématique des signes ouvre énormément de possibilités quand aux usages.</p>
@@ -152,7 +152,7 @@
                 </div>
             </div>
         </section>
-        <section id="how" class="sub-part">
+        <section id="how">
             <div class="container">
                 <h1>Comment ?</h1>
                 <div class="intro">
