--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header class="container-fluid text-center">
-        <h1>LSF Libre</h1>
-        <h2>Une bibliothèque de signes universelle, vectorielle, et libre</h2>
+    <header>
+        <nav role="navigation">
+            <h1>LSF Libre</h1>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="cover" class="text-center">
+            <h2>Une bibliothèque de signes universelle, vectorielle, et libre</h2>
+        </div>
     </header>
 
     <div id="content">
