add contribute french page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="participer.html">Participer</a>
+                </li>
             </ul>
         </nav>
         <div id="cover" class="text-center">
