add family use for for-who part

--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-offset-4 col-md-4">
+                        <div class="card text-center">
+                            <div class="card-block">
+                            <h4 class="card-title">Communication</h4>
+                            <p class="card-text">Permettre <strong>l'accès libre à la langue des signes</strong> pour des personnes dont les proches sont sourds ou malentendants</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
