add resources french page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="participer.html">Participer</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ressources.html">Ressources</a>
+                </li>
             </ul>
         </nav>
         <div id="cover" class="text-center">
