Lien en attendant la ML

--- a/participer.html
+++ b/participer.html
@@ -39,7 +39,7 @@
                 <p class="intro"></p>
 
                 <h2>Comment ?</h2>
-                <p>Si vous êtes intéressés pour suivre l'avancement du projet, rejoignez notre mailing-list (en cours de création)!</p>
+                <p>Si vous êtes intéressés pour suivre l'avancement du projet, rejoignez notre mailing-list (en cours de création, en attendant <a href="http://mathieu.leplat.re">vous pouvez envoyeru un petit mot à Mathieu</a>)!</p>
                 <p>À ce stade du projet, nous sommes surtout à la recherche d'un(e) illustrat(rice/eur) pour concevoir les premiers éléments de base, et donner l'identité graphique!</p>
                 <p>Par la suite, il suffira d'assembler les éléments avec un logiciel de dessin et de soumettre les créations!</p>
                 <p>Si tu es développeur Web et que tu es motivé pour créer une petite application afin de naviguer dans la bibliothèque, rejoins-nous!</p>
