Add missing images

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="https://camo.githubusercontent.com/f2070c914e882669d72d184fc256219dcbad011b/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f766563746f722e706e67" alt="Copie d'écran d'Inscape">
+                                <img src="images/vector.png" alt="Copie d'écran d'Inscape">
                                 <p>De plus, le <a href="https://fr.wikipedia.org/wiki/Scalable_Vector_Graphics" title="Scalable_Vector_Graphics Wikipedia's page">format vectoriel standard SVG</a> est supporté par de nombreux logiciels (et navigateurs Web).</p>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
             <div class="container">
                 <h1>Pour Qui ?</h1>
                 <p class="intro">Le format, la license d'utilisation et le côté schématique des signes ouvre énormément de possibilités quand aux usages.</p>
-                <img class="centered" src="https://camo.githubusercontent.com/b9974370771039945a83c1e702335daee49e98c4/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f6d756c74696d656469612e706e67" alt="Illustration du multi-support">
+                <img class="centered" src="images/multimedia.png" alt="Illustration du multi-support">
                 <p class="intro">Nous avons cependant déjà identifiés ces besoins concrets, auprès d'acteurs et d'associations du monde des sourds
                 </p>
                 <div class="row">
@@ -190,7 +190,7 @@
                     <h2>Éléments à assembler</h2>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="https://camo.githubusercontent.com/d3578fdec1803537a3fb51632270b96e048409d8/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f617373656d626c652e6a7067" alt="Assemblage des éléments du corps en svg">
+                            <img src="images/assemble.png" alt="Assemblage des éléments du corps en svg">
                         </div>
                         <div class="col-md-6">
                             <p>Les différents éléments réutilisables seront regroupés dans des fichiers, indépendamment des langues.</p>
@@ -207,11 +207,11 @@
                     <p>Le logiciel de dessin permet de controler l'aspect des contours des objets (pointillés, opacité, etc.), ce qui permet de représenter le mouvement de manière universelle, à la manière des bandes dessinées.</p>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="https://camo.githubusercontent.com/b9d237d1ef880504af9e6941874dbc906c58933f/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f6d6f76656d657375732e706e67" alt ="Représentation du mouvement avec des flèches">
+                            <img src="images/movement.png" alt ="Représentation du mouvement avec des flèches">
                             <p>Une bibliothèque de simples flèches pourra rendre explicites les mouvements amples.</p>
                         </div>
                         <div class="col-md-6 text-center">
-                            <img src="https://camo.githubusercontent.com/579f7c95e435900ccdf9ddd65991350a8faa629d/687474703a2f2f696d672e3933336b2e6f72672f696d616765732f6361707475726973692e706e67" alt="lexique, plateforme, iconicité">
+                            <img src="images/lexique-plateforme-iconicite.png" alt="lexique, plateforme, iconicité">
                             <span>(exemple non vectoriel du pôle de recherche <a href="http://www.irit.fr/presto/lexique.html" title="PRESTO website lexique page">PRESTO</a>)</span>
                         </div>
                     </div>
